--- a/README.textile
+++ b/README.textile
@@ -25,13 +25,12 @@ h3. Configuration
 For configuring rda, you should create an initialize for rda:
 
 <pre>
-  <code>
-    # config/initializers/rda.rb
-    Rda.configure do
-      nginx_conf_paths ['/etc/nginx', '/opt/nginx/conf',
-'/usr/local/nginx/conf']
-    end
-  </code>
+<code>
+# config/initializers/rda.rb
+Rda.configure do
+  nginx_conf_paths ['/etc/nginx', '/opt/nginx/conf', '/usr/local/nginx/conf']
+end
+</code>
 </pre>
 
 h3. Setup RVM
@@ -62,10 +61,6 @@ h3. Setup Nginx
 
 <code>rake rda:nginx:setup</code>
 
-Please make sure that you have the write permission, or you can run:
-
-<code>sudo rake rda:nginx:setup</code>
-
 First this task will try to find the config files of Nginx which you
 have installed from the following paths:
 
@@ -76,25 +71,22 @@ have installed from the following paths:
 You can change the default searching paths by:
 
 <pre>
-  <code>
-    Rda.configure { nginx_conf_paths ['/path/to/nginx/conf'] }
-  </code>
+<code>
+Rda.configure { nginx_conf_paths ['/path/to/nginx/conf'] }
+</code>
 </pre>
 
-If there are more than one paths found, it will give you a choice to decide
-which one will be used. After choosing a proper path, it will try to
-create two directories sites-available and sites-enabled to save the
-configs of rails applications.
+Please make sure that you have the write permission of the directory you choosed, or you can run:
+
+<code>sudo rake rda:nginx:setup</code>
+
+If there are more than one paths found, it will give you a choice to decide which one will be used. After choosing a proper path, it will try to create two directories sites-available and sites-enabled to save the configs of rails applications.
 
 * sites-available saves the configs of the rails applications.
 * sites-enabled saves the link to the rails applications.
 
-Next it will set Nginx to include the configs under sites-enabled. It
-means that only the applications under sites-enabled will be loaded. And
-than it will create a config file for your application under
-sites-available and create a link to the config file under
-sites-enabled. After all, it will create a local hostname for your
-application in /etc/hosts.
+Next it will set Nginx to include the configs under sites-enabled. It means that only the applications under sites-enabled will be loaded. And than it will create a config file for your application under
+sites-available and create a link to the config file under sites-enabled. After all, it will create a local hostname for your application in /etc/hosts.
 
 h3. Release your rails application(not yet)
 
